jaggi img added in user

--- a/userStyle.css
+++ b/userStyle.css
@@ -185,7 +185,7 @@ nav ul li a:hover::after {
   background-size: cover;
 }
 .loc2 {
-  background-image: url();
+  background-image: url(jaggi.JPG);
   background-size: cover;
 }
 .loc3 {
