--- a/about_form.css
+++ b/about_form.css
@@ -1,4 +1,5 @@
 /* General body and container styling */
+
 body {
   font-family: "Poppins", sans-serif;
   background-color: black;
@@ -105,6 +106,14 @@ label {
   color: #333;
   margin-bottom: 5px;
   display: inline-block;
+}
+/* Logo styling */
+.logo {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  width: 100px; /* Adjust the width as needed */
+  height: auto;
 }
 
 /* Responsive design */
