--- a/userStyle.css
+++ b/userStyle.css
@@ -213,6 +213,7 @@ nav ul li a:hover::after {
 
 .work img {
   width: 100%;
+  max-height: 600px;
   border-radius: 10px;
   display: block;
   transition: transform 0.5s;
